[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/actors/man/gman0002.png" type="Texture" id=1]
[ext_resource path="res://assets/actors/man/gman0003.png" type="Texture" id=2]
[ext_resource path="res://assets/actors/man/gman0012.png" type="Texture" id=3]
[ext_resource path="res://assets/actors/man/gman0004.png" type="Texture" id=4]
[ext_resource path="res://scripts/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://scripts/Player.gd" type="Script" id=6]
[ext_resource path="res://assets/actors/man/gman0011.png" type="Texture" id=7]
[ext_resource path="res://scripts/grabing.gd" type="Script" id=8]
[ext_resource path="res://assets/actors/man/gmangrab0004.png" type="Texture" id=9]
[ext_resource path="res://assets/actors/man/gman0001.png" type="Texture" id=10]
[ext_resource path="res://assets/actors/man/gmangrab0003.png" type="Texture" id=11]
[ext_resource path="res://assets/actors/man/gmangrab0002.png" type="Texture" id=12]
[ext_resource path="res://assets/actors/man/gman0007.png" type="Texture" id=13]
[ext_resource path="res://scripts/idle.gd" type="Script" id=14]
[ext_resource path="res://scripts/falling.gd" type="Script" id=15]
[ext_resource path="res://scripts/walk.gd" type="Script" id=16]
[ext_resource path="res://scripts/jump.gd" type="Script" id=17]
[ext_resource path="res://scripts/PlayerSprite.gd" type="Script" id=18]
[ext_resource path="res://assets/actors/man/gmangrabAttack.png" type="Texture" id=19]
[ext_resource path="res://scripts/drag.gd" type="Script" id=20]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.45203
height = 23.6376

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "fuck",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "fuckCulmination",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle_with_thing",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "dragging",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "grab",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 1.052

[node name="KinematicBody2D" type="KinematicBody2D"]
z_index = 1
collision_layer = 2147483649
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.25085 )
shape = SubResource( 1 )

[node name="ForvardRayCast" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 50 )
collision_mask = 2147483650

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
rotation = 3.14159
scale = Vector2( 1, -1 )
frames = SubResource( 2 )
animation = "grab"
script = ExtResource( 18 )

[node name="DragArea" type="Area2D" parent="."]
rotation = 3.14159
scale = Vector2( 1, -1 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragArea"]
position = Vector2( -17.4963, -4.28716 )
shape = SubResource( 3 )

[node name="AvailiabilityStatusesLabel" type="Label" parent="."]
margin_left = -19.8225
margin_top = -60.5811
margin_right = 20.1775
margin_bottom = -46.5811
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentStateLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -35.0
margin_right = 20.0
margin_bottom = -21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="states" type="Node" parent="."]
script = ExtResource( 5 )

[node name="idle" type="Node" parent="states"]
script = ExtResource( 14 )

[node name="falling" type="Node" parent="states"]
script = ExtResource( 15 )

[node name="walk" type="Node" parent="states"]
script = ExtResource( 16 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 17 )

[node name="dragging" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="grab" type="Node" parent="states"]
script = ExtResource( 20 )
